<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:paddingBottom="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <ImageView
            android:id="@+id/publisher_img"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:contentDescription="@string/author_profile_picture"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvVideoUrl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="12dp"
        android:padding="16dp"
        android:gravity="center"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/video_url"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/video_thumbnail"
        android:src="@drawable/mountain"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clickArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/tvVideoUrl">

        <TextView
            android:id="@+id/video_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/title_of_video"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/publisher_name"
            app:layout_constraintEnd_toStartOf="@+id/expandable_text_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/publisher_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/publisher_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/video_title"
            app:layout_constraintStart_toStartOf="@+id/video_title"
            app:layout_constraintTop_toBottomOf="@+id/video_title" />

        <ImageView
            android:id="@+id/expandable_text_img"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/expand_text_button"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            app:layout_constraintBottom_toBottomOf="@+id/publisher_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/video_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/video_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/video_description"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/clickArea"
        app:layout_constraintStart_toStartOf="@+id/clickArea"
        app:layout_constraintTop_toBottomOf="@+id/clickArea" />

</androidx.constraintlayout.widget.ConstraintLayout>